<resources>
    <string name="app_name">ichangemycity</string>
    <string name="title_activity_navigation_screen">NavigationScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Subtitle goes here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_enter_mobile">Enter your mobile number</string>
    <string name="action_continue">Continue</string>
    <string name="txt_enter_otp">Enter the OTP</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_ok">OK</string>
    <string name="permission_alert_dialog_title">Requesting SMS permission</string>
    <string name="permission_dialog_message">The app will now request your permission to send and read SMS related services.</string>
    <string name="txt_name">Enter your name</string>
    <string name="txt_email">Email address (optional)</string>
    <string name="txt_term_n_condition">Agree to  <font color='#32b4ff'>Terms and Conditions</font></string>
    <string name="txt_term_n_condition_header">Terms and Conditions</string>
    <string name="txt_disabled">Are you disabled?</string>
    <string name="action_upload">Upload Certificate</string>
    <string name="action_back">Back</string>
    <string name="url_terms_webview">https://developer.android.com/guide/webapps/webview</string>

    <!-- Map -->
    <string name="google_maps_key">AIzaSyD3UPFDxtOYhw4y69PWXNfbBKlHErvICiQ</string>
    <string name="ichangemycity">ichangemycity</string>
    <string name="take_survey">Take a survey</string>
    <string name="duration">30</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="location">Location</string>
    <string name="locationDetail">Service used to send live location</string>
    <string name="subcategory">Sub-Category</string>
    <string name="category">Category</string>
    <string name="intent_survey_list">intent_survey_list</string>
    <string name="survey_snippet">Survey Details</string>
    <string name="distance">Distance</string>
    <string name="qualityscore">Quality Score</string>
    <string name="viewallsurveys">View all surveys</string>

    <string name="walkability">Walkability</string>
    <string name="visibility">Visibility</string>
    <string name="drivability">Drivability</string>
    <string name="foothpath_condition">Footpath Condition \n Restricted Timings (6AM - 6PM)</string>
    <string name="road_lighting_condition">Road Lighting Condition \n Restricted Timings (7PM - 5AM)</string>
    <string name="public_amenities">Public Amenities \n Specific to locations</string>
    <string name="restricted_timings_1">Restricted Timings (6AM - 6PM)</string>
    <string name="restricted_timings_2">Restricted Timings (7PM - 5AM)</string>
    <string name="location_specific">Specific to locations</string>
    <string name="select_subcategory">Please select a subcategory</string>
    <string name="select_category">Please select a category</string>
    <string name="alert_message">Your response has been submitted. Thank you for your time!</string>
    <!-- Radio Buttons -->
    <!-- Walkability -->
    <string name="text_broken_footpath">Broken Footpath</string>
    <string name="text_obstacles">Obstacles</string>
    <string name="text_encroachment">Encroachment</string>
    <!-- Drivability -->
    <string name="text_potholes">Potholes</string>
    <string name="text_speedbreakers">Speed Breakers</string>
    <!-- Visibility -->
    <string name="text_luminosity">Luminosity</string>
    <string name="heading">Road Lighting Condition Survey</string>
    <string name="open_camera_button">Open Camera</string>
    <string name="back_home_button">Back Home</string>

    <string name="heading_public_amenities">Public Amenities Survey</string>
    <string name="proceed_to_location">Proceed to Location</string>
    <string name="quick_description">A quick description about the survey</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="choose_survey">Choose the survey you wish to take</string>
    <string name="end_survey">End Survey</string>
</resources>
