<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_searching_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/heading_public_amenities"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/choose_survey"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:id="@+id/toilets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/toilet_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:text="Toilets"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/take_survey_toilets_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginVertical="20dp"
                android:layout_toLeftOf="@id/toilet_text"
                android:background="@drawable/rounded_button_yellow"
                android:fontFamily="sans-serif"
                android:text="@string/take_survey"
                android:textAllCaps="false"
                android:textColor="#333333"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/seating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toilets"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/seating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:text="Seating"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/take_survey_seating_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginVertical="20dp"
                android:layout_toLeftOf="@id/seating_text"
                android:background="@drawable/rounded_button_yellow"
                android:fontFamily="sans-serif"
                android:text="@string/take_survey"
                android:textAllCaps="false"
                android:textColor="#333333"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <Button
            android:id="@+id/back_home_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/seating"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:background="@drawable/rounded_button_yellow"
            android:fontFamily="sans-serif"
            android:text="@string/back_home_button"
            android:textAllCaps="false"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
